# LDPC-codes

./: .gitignore  BP Decoder UI.desktop  Makefile  equalize_dfe.c  joint_dfec_bp.c  run_bp_decoder_ui.sh  transmit_isi.c
DFEC_experiment/: Manifest.toml  Project.toml  README.md
DFEC_experiment/config/: experiment_config.jl
DFEC_experiment/cpp/: Makefile  run_experiment.cpp
DFEC_experiment/data/: 64-128-4.pchk
DFEC_experiment/docs/: PACKET_SYNC_ISSUE_SUMMARY.md
DFEC_experiment/scripts/: compare_julia_c_dfec.jl  compare_julia_cpp_900.jl  compare_julia_cpp_packet.jl  compare_packet_19_20_ber.jl  correct_phase_drift_and_save_jld2.jl  debug_julia_cpp_gap.jl  doppler_analysis.jl  explore_dfec_bp_scales.jl  export_cpp_bundle.jl  inspect_packets.jl  run_experiment.jl  run_packets_19_20.jl  run_phase_corrected_900.jl  run_phase_corrected_900_dfec_bp.jl  run_phase_corrected_900_pilot_sweep.jl  run_three_algo_comparison.jl  sweep_first_chunk_channel_support.jl  sweep_first_chunk_dfec_hyperparams.jl  sweep_first_chunk_pilot_layouts.jl  sync_alignment_check.jl  sync_detector.jl
DFEC_experiment/src/: BPdecoder.jl  ExperimentCore.jl  FEC.jl  FECBasic.jl  LDPCJDPMemoized.jl  SignalUtils.jl
ldpc_gui/: CMakeLists.txt  README.md  main.cpp
plotting/: IEEEPlotBER.jl
replayswap/: Manifest.toml  Project.toml
replayswap/lib/: LDPCJDPMemoized.jl  LMMSE.jl  LinearEQ_BPSK_RSC64_128.jl  ModemQPSK.jl  SignalUtils.jl  TEQScanUtils.jl  TEQScanUtils_BPSK.jl  TurboEQ.jl  TurboEQ_BPSK_RSC64_128.jl  compare_3ways.jl  jsdc_turbo_rounds.jl  paths.jl
replayswap/scripts/: apsr_bpsk_1_2_psrbar.jl  apsr_qpsk_1_4_psrbar.jl  apsr_qpsk_1_4_psweep.jl  build_aug_grid.jl  build_ls_cache_bestD.jl  c3_psrbar.jl  export_cpp_bundle.jl  make_aug_from_realdata.jl  make_replayswap_bases_from_raw.jl  merge_rsc_turbo_into_raw_tidy_csv.jl  psrbar64_128.jl  psweep_replayswap_bpsk_RSC64_128_3ways.jl
replayswap_cpp/: Makefile  README.md
(+50 files in other folders)
